<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.visiontoolsapp.MainActivity">

    <TextView
        android:id="@+id/TitleScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/purple_500"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CurrentVersion"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/GoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoButton"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:textSize="100sp"/>



</LinearLayout>
